--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_group_questions">GroupQuestions</string>
+    <string name="title_activity_study_group_list">StudyGroupList</string>
 </resources>
